[metadata]
name = astropy
author = The Astropy Developers
author_email = astropy.team@gmail.com
license = BSD 3-Clause License
license_file = LICENSE.rst
url = http://astropy.org
description = Astronomy and astrophysics core library
long_description = file: README.rst
keywords = astronomy, astrophysics, cosmology, space, science,units, table, wcs, samp, coordinate, fits, modeling, models, fitting, ascii
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: C
    Programming Language :: Cython
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics

[options]
# We set packages to find: to automatically find all sub-packages
packages = find:
zip_safe = False
tests_require = pytest-astropy
install_requires =
    numpy>=1.18
    pyerfa>=2.0
    PyYAML>=3.13
    packaging>=19.0
python_requires = >=3.8

[options.packages.find]
exclude = astropy._dev

[options.entry_points]
console_scripts =
    fits2bitmap = astropy.visualization.scripts.fits2bitmap:main
    fitscheck = astropy.io.fits.scripts.fitscheck:main
    fitsdiff = astropy.io.fits.scripts.fitsdiff:main
    fitsheader = astropy.io.fits.scripts.fitsheader:main
    fitsinfo = astropy.io.fits.scripts.fitsinfo:main
    samp_hub = astropy.samp.hub_script:hub_script
    showtable = astropy.table.scripts.showtable:main
    volint = astropy.io.votable.volint:main
    wcslint = astropy.wcs.wcslint:main
asdf_extensions =
    astropy = astropy.io.misc.asdf.extension:AstropyExtension
    astropy-asdf = astropy.io.misc.asdf.extension:AstropyAsdfExtension

[options.extras_require]
test =  # Required to run the astropy test suite.
    pytest-astropy>=0.9
    pytest-astropy-header!=0.2.0
    pytest-xdist
test_all =  # Required for testing, plus packages used by particular tests.
    pytest-astropy>=0.9
    pytest-xdist
    objgraph
    ipython>=4.2
    coverage
    skyfield>=1.20
    sgp4>=2.3
recommended =
    scipy>=1.3
    matplotlib>=3.1,!=3.4.0
all =
    scipy>=1.3
    matplotlib>=3.1,!=3.4.0
    certifi
    dask[array]
    h5py
    pyarrow>=5.0.0
    beautifulsoup4
    html5lib
    bleach
    pandas
    sortedcontainers
    pytz
    jplephem
    mpmath
    asdf>=2.10.0
    bottleneck
    ipython>=4.2
    pytest
    typing_extensions>=3.10.0.1
docs =
    sphinx<4
    sphinx-astropy>=1.6
    pytest
    scipy>=1.3
    matplotlib>=3.1,!=3.4.0
    sphinx-changelog>=1.1.0

[options.package_data]
* = data/*, data/*/*, data/*/*/*, data/*/*/*/*, data/*/*/*/*/*, data/*/*/*/*/*/*
astropy = astropy.cfg, CITATION
astropy.cosmology = data/*.ecsv
astropy.utils.tests = data/.hidden_file.txt
astropy.wcs = include/*/*.h
astropy.wcs.tests = extension/*.c

[tool:pytest]
minversion = 7.0
testpaths = "astropy" "docs"
norecursedirs =
    "docs[\/]_build"
    "docs[\/]generated"
    "astropy[\/]extern"
    "astropy[\/]_erfa"
    "astropy[\/]_dev"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
open_files_ignore = "astropy.log" "/etc/hosts" "*.ttf"
remote_data_strict = true
addopts = --doctest-rst
asdf_schema_root = astropy/io/misc/asdf/data/schemas
asdf_schema_tests_enabled = true
xfail_strict = true
qt_no_exception_capture = 1
filterwarnings =
    error
    ignore:unclosed <socket:ResourceWarning
    ignore:unclosed <ssl.SSLSocket:ResourceWarning
    ignore:numpy\.ufunc size changed:RuntimeWarning
    ignore:numpy\.ndarray size changed:RuntimeWarning
    ignore:Importing from numpy:DeprecationWarning:scipy
    ignore:Conversion of the second argument:FutureWarning:scipy
    ignore:Using a non-tuple sequence:FutureWarning:scipy
    ignore:Using or importing the ABCs from 'collections':DeprecationWarning
    ignore:Unknown pytest\.mark\.mpl_image_compare:pytest.PytestUnknownMarkWarning
    ignore:Unknown config option:pytest.PytestConfigWarning
    ignore:matplotlibrc text\.usetex:UserWarning:matplotlib
    # Triggered by ProgressBar > ipykernel.iostream
    ignore:the imp module is deprecated:DeprecationWarning
    # toolz internal deprecation warning https://github.com/pytoolz/toolz/issues/500
    ignore:The toolz\.compatibility module is no longer needed:DeprecationWarning
    # Ignore a warning we emit about not supporting the parallel
    # reading option for now, can be removed once the issue is fixed
    ignore:parallel reading does not currently work, so falling back to serial
    # numpy configurable allocator now wants memory policy set
    ignore:Trying to dealloc data, but a memory policy is not set.
doctest_norecursedirs =
    */setup_package.py
doctest_subpackage_requires =
    astropy/io/misc/asdf/* = asdf
    astropy/table/mixins/dask.py = dask

[flake8]
max-line-length = 100
exclude = extern,*parsetab.py,*lextab.py,astropy/_erfa/core.py

[pycodestyle]
max-line-length = 100
exclude = extern,*parsetab.py,*lextab.py,astropy/_erfa/core.py

[isort]
line_length = 99
sections = FUTURE,STDLIB,THIRDPARTY,NUMPY,FIRSTPARTY,LOCALFOLDER
default_section = THIRDPARTY
known_first_party = astropy
known_numpy = numpy
multi_line_output = 0
balanced_wrapping = True
include_trailing_comma = false

[coverage:run]
omit =
  astropy/__init__*
  astropy/conftest.py
  astropy/*setup*
  astropy/*/tests/*
  astropy/tests/test_*
  astropy/extern/*
  astropy/utils/compat/*
  astropy/version*
  astropy/wcs/docstrings*
  astropy/_erfa/*
  */astropy/__init__*
  */astropy/conftest.py
  */astropy/*setup*
  */astropy/*/tests/*
  */astropy/tests/test_*
  */astropy/extern/*
  */astropy/utils/compat/*
  */astropy/version*
  */astropy/wcs/docstrings*
  */astropy/_erfa/*

[coverage:report]
exclude_lines =
  # Have to re-enable the standard pragma
  pragma: no cover
  # Don't complain about packages we have installed
  except ImportError
  # Don't complain if tests don't hit assertions
  raise AssertionError
  raise NotImplementedError
  # Don't complain about script hooks
  def main\(.*\):
  # Ignore branches that don't pertain to this version of Python
  pragma: py{ignore_python_version}
  # Don't complain about IPython completion helper
  def _ipython_key_completions_
