[metadata]
name = astropy
author = The Astropy Developers
author_email = astropy.team@gmail.com
license = BSD-3-Clause
license_files = LICENSE.rst
url = http://astropy.org
project_urls =
    Documentation = https://docs.astropy.org
    Source = https://github.com/astropy/astropy
description = Astronomy and astrophysics core library
long_description = file: README.rst
keywords = astronomy, astrophysics, cosmology, space, science,units, table, wcs, samp, coordinate, fits, modeling, models, fitting, ascii
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: C
    Programming Language :: Cython
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics

[options]
# We set packages to find: to automatically find all sub-packages
packages = find:
zip_safe = False
tests_require = pytest-astropy
install_requires =
    numpy>=1.21
    pyerfa>=2.0
    PyYAML>=3.13
    packaging>=19.0
python_requires = >=3.8

[options.packages.find]
exclude = astropy._dev

[options.entry_points]
console_scripts =
    fits2bitmap = astropy.visualization.scripts.fits2bitmap:main
    fitscheck = astropy.io.fits.scripts.fitscheck:main
    fitsdiff = astropy.io.fits.scripts.fitsdiff:main
    fitsheader = astropy.io.fits.scripts.fitsheader:main
    fitsinfo = astropy.io.fits.scripts.fitsinfo:main
    samp_hub = astropy.samp.hub_script:hub_script
    showtable = astropy.table.scripts.showtable:main
    volint = astropy.io.votable.volint:main
    wcslint = astropy.wcs.wcslint:main
asdf_extensions =
    astropy = astropy.io.misc.asdf.extension:AstropyExtension
    astropy-asdf = astropy.io.misc.asdf.extension:AstropyAsdfExtension

[options.extras_require]
test =  # Required to run the astropy test suite.
    pytest>=7.0
    pytest-doctestplus>=0.12
    pytest-astropy-header>=0.2.1
    pytest-astropy>=0.10
    pytest-xdist
test_all =  # Required for testing, plus packages used by particular tests.
    pytest>=7.0
    pytest-doctestplus>=0.12
    pytest-astropy-header>=0.2.1
    pytest-astropy>=0.10
    pytest-xdist
    objgraph
    ipython>=4.2
    coverage[toml]
    skyfield>=1.20
    sgp4>=2.3
recommended =
    scipy>=1.5
    matplotlib>=3.2,!=3.4.0,!=3.5.2
all =
    scipy>=1.5
    matplotlib>=3.2,!=3.4.0,!=3.5.2
    certifi
    dask[array]
    h5py
    pyarrow>=5.0.0
    beautifulsoup4
    html5lib
    bleach
    pandas
    sortedcontainers
    pytz
    jplephem
    mpmath
    asdf>=2.10.0
    bottleneck
    ipython>=4.2
    pytest>=7.0
    typing_extensions>=3.10.0.1
    fsspec[http]>=2022.8.2
    s3fs>=2022.8.2
    pre-commit
docs =
    sphinx
    sphinx-astropy>=1.6
    pytest>=7.0
    scipy>=1.3
    matplotlib>=3.2,!=3.4.0,!=3.5.2
    sphinx-changelog>=1.2.0
    Jinja2>=3.0

[options.package_data]
* = data/*, data/*/*, data/*/*/*, data/*/*/*/*, data/*/*/*/*/*, data/*/*/*/*/*/*
astropy = astropy.cfg, CITATION
astropy.cosmology = *.ecsv
astropy.utils.tests = data/.hidden_file.txt
astropy.tests.figures = *.json
astropy.wcs = include/*/*.h
astropy.wcs.tests = extension/*.c

[tool:pytest]
minversion = 7.0
testpaths = "astropy" "docs"
norecursedirs =
    "docs[\/]_build"
    "docs[\/]generated"
    "astropy[\/]extern"
    "astropy[\/]_dev"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
remote_data_strict = true
addopts = --color=yes --doctest-rst
xfail_strict = true
qt_no_exception_capture = 1
filterwarnings =
    error
    ignore:unclosed <socket:ResourceWarning
    ignore:unclosed <ssl.SSLSocket:ResourceWarning
    # Can be removed once Python>=3.11 is the minimum dependency,
    # cf. https://github.com/astropy/astropy/issues/13907
    ignore:unclosed transport <asyncio.sslproto
    ignore:numpy\.ufunc size changed:RuntimeWarning
    ignore:numpy\.ndarray size changed:RuntimeWarning
    ignore:Importing from numpy:DeprecationWarning:scipy
    ignore:Conversion of the second argument:FutureWarning:scipy
    ignore:Using a non-tuple sequence:FutureWarning:scipy
    ignore:Using or importing the ABCs from 'collections':DeprecationWarning
    ignore:Unknown pytest\.mark\.mpl_image_compare:pytest.PytestUnknownMarkWarning
    ignore:Unknown config option:pytest.PytestConfigWarning
    ignore:matplotlibrc text\.usetex:UserWarning:matplotlib
    ignore:The 'text' argument to find\(\)-type methods is deprecated:DeprecationWarning
    # Triggered by ProgressBar > ipykernel.iostream
    ignore:the imp module is deprecated:DeprecationWarning
    # Ignore a warning we emit about not supporting the parallel
    # reading option for now, can be removed once the issue is fixed
    ignore:parallel reading does not currently work, so falling back to serial
    # Ignore deprecation warning for asdf in astropy
    ignore:ASDF functionality for astropy is being moved.*:astropy.utils.exceptions.AstropyDeprecationWarning:astropy.io.misc.asdf.types
    ignore:ASDF functionality for astropy is being moved.*:astropy.utils.exceptions.AstropyDeprecationWarning:astropy.io.misc.asdf.tags.coordinates.frames
    ignore:ASDF functionality for astropy is being moved.*:astropy.utils.exceptions.AstropyDeprecationWarning:astropy.io.misc.asdf.tags.transform.compound
    ignore:ASDF functionality for astropy is being moved.*:astropy.utils.exceptions.AstropyDeprecationWarning:astropy.io.misc.asdf.connect
    # Ignore deprecation warning triggered by s3fs (fsspec/s3fs#716)
    ignore:'cgi' is deprecated and slated for removal in Python 3.13:DeprecationWarning
doctest_norecursedirs =
    */setup_package.py
doctest_subpackage_requires =
    astropy/io/misc/asdf/* = asdf
    astropy/table/mixins/dask.py = dask
    docs/io/fits/index.rst = numpy<1.25  # NUMPY_LT_1_25 (Issue 14545)
    docs/io/fits/usage/image.rst = numpy<1.25  # NUMPY_LT_1_25 (Issue 14545)
    docs/io/fits/usage/unfamiliar.rst = numpy<1.25  # NUMPY_LT_1_25 (Issue 14545)

[flake8]
max-line-length = 88
select = E,F,W
exclude = extern,*parsetab.py,*lextab.py
extend-ignore = E203,E501,E711,E721,E731,E741,F403,F821,F841,W5
per-file-ignores =
    __init__.py:F401,F403,E402
    test_*.py:E402
    astropy/io/registry/compat.py:F822
    astropy/modeling/models.py:F401,F403,F405
    examples/*.py:E1,E2,E402
    */examples/*.py:E1,E2,E402

[pycodestyle]
max-line-length = 88
exclude = extern,*parsetab.py,*lextab.py
